logic and animation

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -61,22 +61,32 @@ $colors: (
   }
 }
 
-@function gradient($selected-colors) {
-  $linear-gradient: 'linear-gradient(180deg ';
+// @function gradient($selected-colors) {
+//   $linear-gradient: 'linear-gradient(180deg ';
 
-  @each $number, $color in $selected-colors {
-    $linear-gradient: $linear-gradient + ", #{$color} "
-  }
+//   @each $number, $color in $selected-colors {
+//     $linear-gradient: $linear-gradient + ", #{$color} "
+//   }
 
-  $linear-gradient: $linear-gradient + ')';
-  $linear-gradient: unquote($linear-gradient);
-  
-  @return $linear-gradient;
+//   $linear-gradient: $linear-gradient + ')';
+//   $linear-gradient: unquote($linear-gradient);
+
+//   @return $linear-gradient;
+// }
+@for $i from 1 through 5 {
+      @property --color-#{$i} {
+        syntax: '<color>';
+        inherits: true;
+        initial-value: transparent;
+      }
 }
 
 @each $name, $selected-colors in $colors {
   .#{$name} {
-    background-image: gradient($selected-colors);
+    @each $number, $color in $selected-colors {
+      --color-#{$number}:#{$color};
+    } 
+    background-image: linear-gradient(180deg, var(--color-1), var(--color-2), var(--color-3), var(--color-4), var(--color-5));
     @include classes(null, $selected-colors);
   }
 
