--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,12 @@ main {
     justify-content: center;
     min-height: 100vh;
     position: relative;
+    transition: --color-1 0.5s ease-in-out,
+        --color-2 0.5s ease-in-out,
+        --color-3 0.5s ease-in-out,
+        --color-4 0.5s ease-in-out, 
+        --color-5 0.5s ease-in-out;
+
 }
 
 .colors-container {
@@ -30,6 +36,15 @@ main {
         position: relative;
         bottom: calc(2.3rem * var(--bottom));
         z-index: calc(5 - var(--bottom));
+        transition: all 0.5s ease;
+
+    }
+
+    &.transition {
+        .balloon {
+            bottom: 0;
+            box-shadow: none;
+        }
     }
 }
 
@@ -49,9 +64,12 @@ main {
         border: none;
         box-shadow: 5px 3px 0px rgba(0, 0, 0, 0.3);
         margin-inline: 1rem;
+        cursor: pointer;
 
-        &:hover {
+        &:hover,
+        &.select {
             transform: scale(1.1);
         }
+
     }
 }
